restructure for multiple output languages